Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13574

Memory leak in mariabackup.incremental_backup

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2.7
    • 10.2.9
    • Backup

    Description

      The function have_queries_to_wait_for() in Mariabackup leaks memory.
      To repeat:

      cmake -DWITH_ASAN:BOOL=ON
      make
      cd mysql-test
      ./mtr mariabackup.incremental_backup
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1h
                  1h
                  Remaining:
                  Remaining Estimate - 1h
                  1h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.