MDEV-13574 related Mariabackup code cleanup (non-functional change)

have_queries_to_wait_for(), kill_long_queries(): Declare and initialize
variables in one go.